<resources>
    <string name="app_name">LHGallery</string>
    <string name="title_photos">Photos</string>
    <string name="title_albums">Albums</string>
    <string name="title_selected">Selected</string>
    <string name="title_settings">Settings</string>
    <string name="date_format_by_day">yyyy-MM-dd</string>
    <string name="text_loading">Loading…</string>
    <string name="settings_title_common">Common</string>
    <string name="settings_title_common_show_pictures">Show Pictures</string>
    <string name="settings_summary_show_pictures">Show Pictures On HomePage</string>
    <string name="settings_title_common_show_videos">Show Videos</string>
    <string name="settings_summary_show_videos">Show Videos On HomePage</string>
    <string name="settings_about">About</string>
    <string name="settings_about_app_version">App Version</string>
    <string name="setting_privacy">Privacy</string>
    <string name="setting_privacy_description">Gallery does not upload privacy data</string>
    <string name="settings_title_privacy_provide_crash_information">Analysis Statistics</string>
    <string name="settings_summary_privacy_provide_crash_information">Automatically send crash and error messages to developers</string>
    <string name="photos_fab_sort_date_added">sort by add time</string>
    <string name="photos_fab_sort_date_modify">sort by modify time</string>
    <string name="lab_about">About</string>
    <string name="about_category_introduce">What\'s this</string>
    <string name="about_card_introduce">Apps to view pictures and videos on your phone</string>
    <string name="about_star">star</string>
    <string name="snapshot_add">Added</string>
    <string name="snapshot_remove">Remove</string>
    <string name="snapshot_change">Change</string>
    <string name="snapshot_move">Move</string>
    <string name="snapshot_time_stamp">TimeStamp</string>
    <string name="snapshot_number_pictures">Numbers</string>

    <!--shortcut-->
    <string name="shortcut_title_photos">Photos</string>
    <string name="shortcut_title_albums">Album</string>

    <!-- contentDescription-->
    <string name="content_description_gallery_detail">Gallery Picture Detail</string>
    <string name="content_description_gallery_group_picture">Gallery Group Picture</string>
    <string name="content_description_gallery_add_album">Add Album</string>
</resources>