<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_navigation"
    app:startDestination="@+id/navigation_photos">

    <fragment
        android:id="@+id/navigation_photos"
        android:name="com.zaiming.android.lighthousegallery.ui.fragment.PhotosFragment"
        android:label="@string/title_photos"
        tools:layout="@layout/fragment_photos" />

    <fragment
        android:id="@+id/navigation_albums"
        android:name="com.zaiming.android.lighthousegallery.ui.fragment.AlbumsFragment"
        android:label="@string/title_albums"
        tools:layout="@layout/fragment_albums" />

    <fragment
        android:id="@+id/navigation_selected"
        android:name="com.zaiming.android.lighthousegallery.ui.fragment.SelectedFragment"
        android:label="@string/title_selected"
        tools:layout="@layout/fragment_selected" />

    <fragment
        android:id="@+id/navigation_recommends"
        android:name="com.zaiming.android.lighthousegallery.ui.fragment.RecommendFragment"
        android:label="@string/title_recommends"
        tools:layout="@layout/fragment_recommends" />
</navigation>